# ttv

./: .travis.yml  CMakeLists.txt  README.md  blis.mk  mkl.mk  openblas.mk
.ci/: report_coverage.sh
.github/workflows/: test.yml
example/: CMakeLists.txt  Makefile  interface1.cpp  interface2.cpp  interface3.cpp
include/: CMakeLists.txt
include/tlib/: ttv.h
include/tlib/detail/: cases.h  index.h  layout.h  matrix_times_vector.h  shape.h  strides.h  tags.h  tensor.h  tensor_times_vector.h  workload_computation.h
misc/: equation.eps
test/: CMakeLists.txt  Makefile  gtest.mk
test/include/: gtest_aux.h
test/src/: gtest_tlib_layout.cpp  gtest_tlib_mtv.cpp  gtest_tlib_shape.cpp  gtest_tlib_strides.cpp  gtest_tlib_ttv.cpp  gtest_tlib_workload.cpp  main.cpp
ttvpy/: LICENSE.txt  README.md  pyproject.toml  setup.py
ttvpy/src/: wrapped_ttv.cpp
ttvpy/tests/: test.py
